# GCA_Project

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_QUICK_START.md  README.md  docker-compose.production.yml
backend/: ADMIN_SETUP_DASHBOARD.html  ADMIN_SETUP_GUIDE.md  ARGUIDOR_INTERFACE.html  COMPLETE_PROJECT_STATUS.md  Dockerfile  ESTRATEGIA_MONITORAMENTO_ADMIN.md  FASE2_COMPLETION_SUMMARY.md  FASE2_FILE_MANIFEST.md  FASE_4_CODEGEN.md  FASE_5_DASHBOARD.md  FASE_6_VALIDATION.md  FASE_7_GITHUB.md  FLUXO_ACESSO_USUARIOS.md  INTEGRACAO_TEAMS_SLACK.md  N8N_HYBRID_IMPLEMENTATION.md  PHASE5_DEPLOYMENT_CHECKLIST.md  PHASES_COMPLETE_SUMMARY.md  PROJECT_PHASES.md  PROJECT_STATUS.md  PROTOTYPE_UI.html  QUICKSTART_DEV.md  SAC_CENTRAL_ATENDIMENTO.md  SAC_INTERFACE_TENANT.html  SESSAO_07_CONSOLIDATION.md  TEST_GUIDE_FASE2.md  pyproject.toml
backend/app/: main.py
backend/app/certs/: private.pem  public.pem
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  database.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  base.py  onboarding.py  pillar.py  tenant.py
backend/app/routers/: __init__.py  admin.py  auth.py  code_generation.py  dashboard.py  evaluation.py  github.py  ocg.py  onboarding.py  organizations.py  projects.py  questionnaires.py  users.py  validation.py  webhooks.py
backend/app/schemas/: user.py
backend/app/seeds/: __init__.py  seed_mock_project.py  seed_pillars.py
backend/app/services/: __init__.py  admin_service.py  ai_service.py  auth_service.py  code_generation_service.py  code_validation_service.py  email_service.py  evaluation_service.py  github_service.py  llm_service.py  mock_n8n_service.py  monitoring_service.py  n8n_service.py  onboarding_service.py  piloter_service.py  project_team_service.py  questionnaire_service.py
backend/app/tests/: __init__.py  conftest.py  factories.py  test_admin_service.py  test_auth_reset_password.py  test_e2e_fase3_5.py  (+9 more)
backend/migrations/: 001_add_password_reset_tables.sql  002_add_questionnaires_table.sql
(+80 files in other folders)
